--- a/packages/preamble.sty
+++ b/packages/preamble.sty
@@ -14,6 +14,10 @@
 \usepackage{parskip}
 \restoreparindent
 \usepackage{tabularx}
+\usepackage{amssymb, bm}
+\usepackage{subcaption}
+\usepackage{caption}
+\usepackage{float}
 
 \definecolor{mygreen}{rgb}{0,0.6,0}
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
