--- a/ATRIM/TP4/TP4-background-substraction-sv.ipynb
+++ b/ATRIM/TP4/TP4-background-substraction-sv.ipynb
@@ -126,9 +126,8 @@
     "\n",
     "* un premier thresholding afin de mieux distinguer l'outil du fond noir, la valeur du threshold sera obtenu suite à une visualisation au préalable de l'histogramme\n",
     "* un filtrage passe-bas afin de réduire le bruit\n",
-    "* une amélioration des contours à l'aide du laplacian enhancing\n",
     "* une suppression manuelle d'une ligne verticale parasite à gauche des images et hors de la région d'interêt. On peut également utiliser cette méthode pour supprimer une partie gauche de l'outil pas présente sur les images objectifs fournies (cf ligne commentée de la partie \"Suppression maneulle\")\n",
-    "* une dilation afin de relier des parties déconnectées de l'outil\n",
+    "* une erosion afin de supprimer des points isolés de l'image et affiner le tracé\n",
     "* un thresholding afin d'obtenir le type de masque desiré"
    ]
   },
@@ -368,42 +367,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Laplacian enhancement"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generateLaplacianKernel():\n",
-    "    return np.array([[0,1,0], [1,-4,1], [0,1,0]])\n",
-    "\n",
-    "def laplacianEnhance(im,c):\n",
-    "    kernelL = generateLaplacianKernel()\n",
-    "    laplaceImg = ndimage.convolve(im,kernelL)\n",
-    "    im_sharp = im + c * laplaceImg\n",
-    "    return im_sharp\n",
-    "\n",
-    "fig = plt.figure(figsize=(10, 10))\n",
-    "\n",
-    "diff_enhanced = deepcopy(diff_filtered)\n",
-    "\n",
-    "i = 1\n",
-    "for key in diff_enhanced:\n",
-    "    diff_enhanced[key] = laplacianEnhance(diff_filtered[key], -1)\n",
-    "    plt.subplot(3, 3, i)\n",
-    "    plt.imshow(diff_enhanced[key], cmap='gray')\n",
-    "    plt.axis('off')\n",
-    "    plt.title(key)\n",
-    "    i += 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Suppression manuelle"
    ]
   },
@@ -415,12 +378,12 @@
    "source": [
     "fig=plt.figure(figsize=(10, 10))\n",
     "\n",
-    "diff_final = deepcopy(diff_enhanced)\n",
+    "diff_final = deepcopy(diff_filtered)\n",
     "\n",
     "i = 1\n",
     "for key in diff_enhanced:\n",
     "    diff_final[key][:,:60] = 0 # on retire le trait vertical à gauche des images\n",
-    "    # diff_final[key][350:,:430] = 0 # on retire une partie gauche de l'outil\n",
+    "    diff_final[key][-25:,:] = 0 # on retire le bas de l'outil\n",
     "    plt.subplot(3, 3, i)\n",
     "    plt.imshow(diff_final[key], cmap='gray')\n",
     "    plt.axis('off')\n",
@@ -439,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dilation"
+    "### Erosion"
    ]
   },
   {
@@ -448,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skimage.morphology import dilation\n",
+    "from skimage.morphology import dilation, erosion, opening, closing\n",
     "\n",
     "fig=plt.figure(figsize=(10, 10))\n",
     "\n",
@@ -456,7 +419,8 @@
     "\n",
     "i = 1\n",
     "for key in diff_morph:\n",
-    "    diff_morph[key] = dilation(diff_morph[key], np.ones((5,5)))\n",
+    "    diff_morph[key] = erosion(diff_morph[key], np.ones((4,4)))\n",
+    "    \n",
     "    plt.subplot(3, 3, i)\n",
     "    plt.imshow(diff_morph[key], cmap='gray')\n",
     "    plt.axis('off')\n",
@@ -464,13 +428,6 @@
     "    i += 1\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Nous avons retiré quelques zones de discontinuité."
    ]
   },
   {
@@ -486,18 +443,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig=plt.figure(figsize=(10, 10))\n",
+    "fig=plt.figure(figsize=(10, 40))\n",
     "\n",
     "result = deepcopy(diff_morph)\n",
+    "old = {}\n",
     "\n",
     "i = 1\n",
     "for key in diff_morph:\n",
     "    result[key] = np.where(result[key] > 0.15 * np.max(result[key]), 0, 1)\n",
-    "    plt.subplot(3, 3, i)\n",
+    "    old[key] = np.where(diff_final[key] > 0.15 * np.max(diff_final[key]), 0, 1)\n",
+    "    plt.subplot(9, 2, i)\n",
     "    plt.imshow(result[key], cmap='gray')\n",
     "    plt.axis('off')\n",
     "    plt.title(key)\n",
-    "    i += 1\n",
+    "    plt.subplot(9, 2, i+1)\n",
+    "    plt.imshow(old[key], cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    plt.title('old')\n",
+    "    i += 2\n",
     "\n",
     "plt.show()"
    ]
@@ -506,7 +469,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "L'erosion a bien persmis de supprimer quelques points isolés de l'image et d'affiner le tracé"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Évaluation des performances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualisation des masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMDIR = 'catheter'\n",
+    "fig=plt.figure(figsize=(10, 40))\n",
+    "\n",
+    "wire = {}\n",
+    "cath = {}\n",
+    "\n",
+    "for root, dirnames, filenames in os.walk(IMDIR):\n",
+    "    for filename in filenames:\n",
+    "        f = os.path.join(root, filename)\n",
+    "        if filename.startswith(('2')):\n",
+    "            if not filename.startswith('201'):\n",
+    "                im = io.imread(f)\n",
+    "                if len(im.shape) > 2:\n",
+    "                    im = im[:,:,0]\n",
+    "                if filename.endswith('GuideWire.tiff'):\n",
+    "                    wire[filename[:3]] = im.astype('float') / 255\n",
+    "                else:\n",
+    "                    cath[filename[:3]] = im.astype('float') / 255\n",
+    "\n",
+    "goal = deepcopy(wire)\n",
+    "for key in goal:\n",
+    "    goal[key] = (wire[key] + cath[key]) / 2\n",
+    "    \n",
+    "i = 1\n",
+    "for key in frames:\n",
+    "    plt.subplot(9, 2, i)\n",
+    "    plt.imshow(result[key], cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    plt.title(key)\n",
+    "    plt.subplot(9, 2, i+1)\n",
+    "    plt.imshow(goal[key], cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    plt.title(key)\n",
+    "    i += 2\n",
+    "    \n",
+    "plt.show()"
    ]
   },
   {
