--- a/ATRIM/TP4/TP4-background-substraction-sv.ipynb
+++ b/ATRIM/TP4/TP4-background-substraction-sv.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "* un premier thresholding afin de mieux distinguer l'outil du fond noir, la valeur du threshold sera obtenu suite à une visualisation au préalable de l'histogramme\n",
     "* un filtrage passe-bas afin de réduire le bruit\n",
-    "* une suppression manuelle d'une ligne verticale parasite à gauche des images et hors de la région d'interêt. On peut également utiliser cette méthode pour supprimer une partie gauche de l'outil pas présente sur les images objectifs fournies (cf ligne commentée de la partie \"Suppression maneulle\")\n",
+    "* une suppression manuelle d'une ligne verticale parasite à gauche des images et de la partie basse de l'outil. On sait que ces deux zones sont systematiquement hors de la région d'interêt ce qui permet de simplement mettre à 0 les zones concernées\n",
     "* une erosion afin de supprimer des points isolés de l'image et affiner le tracé\n",
     "* un thresholding afin d'obtenir le type de masque desiré"
    ]
@@ -381,7 +381,7 @@
     "diff_final = deepcopy(diff_filtered)\n",
     "\n",
     "i = 1\n",
-    "for key in diff_enhanced:\n",
+    "for key in diff_final:\n",
     "    diff_final[key][:,:60] = 0 # on retire le trait vertical à gauche des images\n",
     "    diff_final[key][-25:,:] = 0 # on retire le bas de l'outil\n",
     "    plt.subplot(3, 3, i)\n",
